# Puck

./: .editorconfig  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CLA.md  CLAUDE.md  COMMUNITY-GUIDELINES.md  CodeMetricsConfig.txt  Directory.Build.props  Directory.Build.targets  LICENSING.md  PLATFORM-TERMS.md  PRIVACY.md  Puck.code-workspace  Puck.lutconfig  Puck.slnx  README.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  global.json  packages.lock.json
.config/: dotnet-tools.json
docs/: ACKNOWLEDGMENTS.md  README.md  agb-sota-survey.md  agent-guide.md  automatic-cyclic-incidence-theorem.md  avatar-vm.md  bds-metallic-mean-conjecture.md  camera-content-source-plan.md  capability-catalog.md  capability-register.md  carve-bake-plan.md  cross-backend-parity.md  cyclic-parity-irreducibility-theorem.md  debug-visualization.md  demo-post-rework-plan.md  demo-to-world-port-plan.md  e8-five-letter-irreducibility.md  engine-bench-plan.md  feature-parity-summary.md  feature-parity-table.md  fibonacci-coloring-equality-infinitely-often.md  game-studio-plan.md  gb-cycle-accuracy-scorecard.md  gb-ppu-accuracy-findings.md  greenfield-refactor-verdict.md  ideal-gaming-brick-plan.md  machine-fleet-briefing.md  machine-fleet-plan.md  overworld-demo-plan.md  platform-display-kinds.md  polynomial-continued-fraction-tails.md  polynomial-tail-connection-coordinate.md  (+31 more)
schema/: run.schema.json
templates/puck-addon-rust/: Cargo.toml  README.md  build.ps1  build.sh
templates/puck-addon-rust/.cargo/: config.toml
templates/puck-addon-rust/src/: abi.rs  fixed.rs  fixed_tests.rs  lib.rs
(+3136 files in other folders)
